# DB_course_labs

DB_course_labs-lab1/: README.md  db_labs.paw
DB_course_labs-lab1/db_labs/api/: __init__.py
DB_course_labs-lab1/db_labs/db/: __init__.py
DB_course_labs-lab1/db_labs/model/: developer.py  developer_skill.py
DB_course_labs-lab1/db_labs/test/: test_app.py
DB_course_labs-lab1/migrations/versions/: 89c3265cccbc_trgm_indexes.py
DB_course_labs-lab2/: Makefile  README.md  app.py  db_labs.paw  pyproject.toml
DB_course_labs-lab2/db_labs/: config.py  create_app.py
DB_course_labs-lab2/db_labs/api/: schemas.py
DB_course_labs-lab2/db_labs/api/developer/: schema.py
DB_course_labs-lab2/db_labs/api/vacancy/: schema.py
DB_course_labs-lab2/db_labs/cli/: __init__.py
DB_course_labs-lab2/db_labs/db/: fixtures.py
DB_course_labs-lab2/db_labs/domain/developer/: __init__.py
DB_course_labs-lab2/db_labs/model/: skill.py  trgm_extension.py  vacancy.py
DB_course_labs-lab2/db_labs/test/: test_db_seed.py  test_developer_api.py
DB_course_labs-lab2/doc/: Makefile  conf.py
DB_course_labs-lab2/migrations/versions/: 32adfebb0d49_init.py
DB_course_labs-lab3/: README.md  db_labs.paw  mypy.ini  package-lock.json  tox.ini
DB_course_labs-lab3/db_labs/: commands.py  config.py  flaskapp.py
DB_course_labs-lab3/db_labs/api/: __init__.py  monitor.py
DB_course_labs-lab3/db_labs/model/: __init__.py  constant.py  developer.py  developer_skill.py  skill.py  user.py  vacancy.py
DB_course_labs-lab3/db_labs/test/: conftest.py  test_auth.py  test_developer_api.py
(+11 files in other folders)
